--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -1,4 +1,4 @@
-.aa {
+.aa {/*these are customizations that I made for the links*/
     color: greenyellow;
     font-size: 30px;
     text-decoration: none;
